corrections esthéthiques sur le formulaire en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ header {
 .search-form {
     display: flex;
     flex-flow: column;
-    gap: 40px;
+    gap: 30px;
     margin: 30px 0 25px 0;
 }
 
@@ -139,7 +139,7 @@ header {
 
 .filters {
     display: flex;
-    gap: 15px;
+    gap: 20px 10px ;
 }
 
 .filters a {
@@ -330,7 +330,7 @@ footer {
     background: var(--main-bg-color);
 }
 
-.footer-container {
+.footer-nav {
     display: flex;
     justify-content: space-between;
     width: 70%;
@@ -434,7 +434,7 @@ footer li {
     }
 
     .main-title {
-        padding: 30px 30px 0 30px;
+        padding: 20px calc(15vw - 35px);
     }
 
     .main-title p {
@@ -443,8 +443,18 @@ footer li {
 
     .search-form {
         align-items: center;
-        margin-bottom: 15px;
+        margin: 0 0 15px 0;
         font-size: calc(10px + 0.4vw);
+        padding-inline: calc(15vw - 35px);
+    }
+
+    .search-bar {
+        width: 100%;
+        max-width: 400px;
+    }
+
+    .search-input {
+        flex-grow: 1;
     }
 
     .search-button-text {
@@ -458,19 +468,17 @@ footer li {
         box-shadow: 0px 5px 5px #00000067;
     }
 
-    .filters-container {
-        padding: 0 0 0 calc(15vw - 35px);
-    }
-
     .filters {
         display: flex;
         flex-flow: wrap;
+        justify-content: space-between;
     }
 
     .filters a {
         width: 35%;
-        padding: 3% 2%;
+        /* padding: 3% 2%; */
         font-size: 13.5px;
+        flex-grow: 1;
     }
 
     .fa-magnifying-glass {
@@ -547,7 +555,7 @@ footer li {
         height: 141px;
     }
 
-    .footer-container {
+    .footer-nav {
         flex-flow: column;
         padding-inline: calc(20vw - 50px);
     }
